crates/wac-parser/tests/resolution/fail/import-duplicate-name.wac
package test:comp;

import x with "foo": func();
import y with "foo": interface {};
